# lane-case-classification

./: .gitignore  README.md  collect_img.py  pyproject.toml
notebook/: test.ipynb
src/lane_case_classification/: __init__.py  inference.py  main.py
